--- a/app/src/main/res/layout/camera_fragment.xml
+++ b/app/src/main/res/layout/camera_fragment.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <TextView
+    <Button
         android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save Image"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_12sdp"
-        android:textSize="@dimen/_18sdp"
+        android:layout_width="383dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
+        android:layout_marginBottom="@dimen/_12sdp"
+        android:background="#FDE4E4"
+        android:text="Take a photo"
         android:textAlignment="center"
-        android:background="@color/gray"
-      />
+        android:textSize="@dimen/_18sdp" />
 
-    <TextView
+    <Button
         android:id="@+id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Image"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_12sdp"
-        android:textSize="@dimen/_18sdp"
-        android:textAlignment="center"
-        android:background="@color/gray"
+        android:layout_width="381dp"
+        android:layout_height="52dp"
         android:layout_below="@id/text"
-        >
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
+        android:layout_marginBottom="@dimen/_12sdp"
+        android:background="#FDE4E4"
+        android:text="Gallery"
+        android:textAlignment="center"
+        android:textSize="@dimen/_18sdp">
 
-    </TextView>
+    </Button>
 
 </RelativeLayout>
