--- a/app/src/main/res/layout/local_database_items.xml
+++ b/app/src/main/res/layout/local_database_items.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="120dp"
@@ -30,17 +30,27 @@
                 android:scaleType="centerCrop"
 
                 />
+
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="328dp"
+                android:padding="@dimen/_4sdp"
+                android:src="@drawable/share"
+                app:tint="#C7C7C7" />
+
             <ImageView
                 android:id="@+id/delete"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_35sdp"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="-4dp"
                 android:padding="@dimen/_4sdp"
                 android:src="@drawable/delete_icon"
-                android:tint="#C7C7C7"
-               />
-
+                app:tint="#C7C7C7" />
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
