--- a/app/src/main/res/layout/local_fragment.xml
+++ b/app/src/main/res/layout/local_fragment.xml
@@ -8,15 +8,14 @@
     android:background="@color/color_white">
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
         android:background="@color/color_white"
         android:padding="3dp"
-        android:scrollbars="none"
-        />
+        android:scrollbars="none" />
 
 
 </LinearLayout>
